# scripture_os

./: .env-sample  .gitignore  Cargo.toml  README.md  database_schema.md  development_plan_011.md  docker-compose.yml
docs/api/: endpoints.md
docs/architecture/: database_schema.md  fractional_scripture_index.md  fractional_scripture_index_001.md  lemma.md  lexicon.md  omni_scripture_ledger.md  repository_abstraction.md  schema_flowchart.md  scroll_notary_hashing_system.md  stand_off_markup.md
docs/decisions/: directory_structure  hash-locations-db-plan.md  merkle-hash-trees.md  merkle-hasing.md  merkle-tree-module.md  possible_direction.md  service_design_guide.md  temp.md  todo.md
docs/decisions/archive/v0.1.3/: Cargo.toml  rust_help.md  todo.md  var_1.md
docs/decisions/archive/v0.1.3/schema/: init.sql
docs/decisions/archive/v0.1.3/src/: models.rs  test_utils.rs
docs/decisions/archive/v0.1.3/src/engines/: fsi_content.rs
docs/decisions/archive/v0.1.3/src/engines/content/: mod.rs
docs/decisions/archive/v0.1.3/src/engines/resolution/: mod.rs
docs/decisions/archive/v0.1.3/src/fsi/: lex_key.rs  models.rs  seeder.rs
docs/decisions/archive/v0.1.3/src/repository/: fsi_mock.rs  fsi_postgres.rs  mod.rs
docs/decisions/archive/v0.1.3/tests/: content_comparisons.rs  engine_flow.rs  navigation_test.rs
docs/guides/: development_standards.md  namespace_taxonomy.md  roadmap_management.md  testing_standards.md
docs/setup/: documentation_guide.md  (+1 more)
schema/: init.sql
src/: lib.rs  main.rs  models.rs  test_utils.rs
tests/: README.md  content_comparisons.rs  db_integration_test.rs  engine_flow.rs  fsi_pipeline_test.rs  search_test.rs  test_guidelines.md  verse_nodes.csv
(+30 files in other folders)
