[package]
name = "scripture_os"
version = "0.1.4"
edition = "2024"

[dependencies]
# Async & Web
tokio = { version = "1.52.1", features = ["full"] }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }

# Data & Logic
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
blake3 = "1.8.4"
async-trait = "0.1.89"
thiserror = "2.0.18"
