[package]
name = "scripture_os"
version = "0.1.3"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors"] } #for browser access
regex = "1.12.3"
anyhow = "1.0.102"
serde_json = "1.0.149"
async-trait = "0.1.89"
smallvec = "1.15.1"
parking_lot = "0.12.5"
csv = "1.4.0"
